# bres

./: CMakeLists.txt  README.md
inc/: bres+bm.hh  bres+client_def.h  bres+client_ext.h  bres+client_vdevice_inl.hh  bres+client_webrtc_inl.hh
src/: audio.cc  bm.cc  event.cc  gl.cc  instances.cc  main.cc  publish_side_channel.cc  resource_static_image.cc  subscribe_side_channel.cc  telnet_service.cc  webrtc.cc  websockets.cc
src/examples/play_audio/: CMakeLists.txt  README.md
src/examples/play_audio/inc/: play_audio_def.h  play_audio_ext.h
src/examples/play_audio/inc/webrtc/: audio_render_inl.hh  create_session_description_inl.hh  observer_interface_inl.hh  peer_connection_inl.hh  set_remote_description_inl.hh  set_session_description_inl.hh  ssl_certificate_verifier_inl.hh  video_render_inl.hh
src/examples/play_audio/src/: main.cc  replace_string.cc
src/examples/play_audio/src/webrtc/: start.cc  stop.cc
src/examples/play_audio/src/websockets/: callback.cc  start.cc  stop.cc
src/examples/play_movie/: CMakeLists.txt  README.md
src/examples/play_movie/inc/: play_movie_def.h  play_movie_ext.h
src/examples/play_movie/inc/webrtc/: audio_render_inl.hh  create_session_description_inl.hh  observer_interface_inl.hh  peer_connection_inl.hh  set_remote_description_inl.hh  set_session_description_inl.hh  ssl_certificate_verifier_inl.hh  video_codec_inl.hh  video_render_inl.hh
src/examples/play_movie/src/: main.cc  replace_string.cc
src/examples/play_movie/src/webrtc/: event.cc  start.cc  stop.cc
src/examples/play_movie/src/websockets/: callback.cc  start.cc  stop.cc
